tests/ui/async-await/async-closures/is-not-fn.next.stderr
error[E0271]: type mismatch resolving `{async closure body@$DIR/is-not-fn.rs:8:23: 8:25} == ()`
  --> $DIR/is-not-fn.rs:8:14
   |
LL |     needs_fn(async || {});
   |     -------- ^^^^^^^^^^^ types differ
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `needs_fn`
  --> $DIR/is-not-fn.rs:7:25
   |
LL |     fn needs_fn(x: impl FnOnce()) {}
   |                         ^^^^^^^^ required by this bound in `needs_fn`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
